--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600");
 @import url("fontawesome-all.min.css");
-
-/*
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+ 
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -1930,10 +1925,10 @@ input, select, textarea {
 
 	ul.icons {
 		position: relative;
-		background: rgba(128, 128, 128, 0.05);
-		border-radius: 4em;
+		background: rgba(0, 0, 0, 0.1);
+		border-radius: 3em;
 		display: inline-block;
-		padding: 0.35em 0.75em 0.35em 0.75em;
+		padding: 0.35em 1.75em 0.35em 0.75em;
 		font-size: 1.25em;
 		cursor: default;
 		list-style: none;
@@ -1947,9 +1942,9 @@ input, select, textarea {
 			ul.icons li a {
 				display: inline-block;
 				background: none;
-				width: 2.5em;
-				height: 2.5em;
-				line-height: 2.5em;
+				width: 4.5em;
+				height: 2.0em;
+				line-height: 3em;
 				text-align: center;
 				border-radius: 100%;
 				border: 0;
@@ -2127,7 +2122,21 @@ input, select, textarea {
 		.post.stub header {
 			margin: 0;
 		}
-
+	.resumeFile {
+			color: rgb(255, 255, 255);
+			 font-size: 15px; line-height: 25px; 
+			 padding: 7px; border-radius: 10px; 
+			 font-family: Georgia, serif; 
+			 font-weight: normal;
+			  text-decoration: none; 
+			  font-style: normal; 
+			  font-variant: normal; 
+			   background-color: rgb(0, 107, 160);
+			   box-shadow: 5px 10px 8px #888888;
+			 border: 2px solid #888888(187, 228, 255);
+			  display: inline-block;}
+ 
+	}
 /* Icons */
 
 	.icon {
@@ -2186,8 +2195,8 @@ input, select, textarea {
 
 	.wrapper {
 		background: #fff;
-		margin: 0 0 2em 0;
-		padding: 6em 0 6em 0;
+		margin: 0 0 0em 0;
+		padding: 2.25em 0 2.25em 0;
 	}
 
 		.wrapper.style2 {
@@ -2432,7 +2441,12 @@ input, select, textarea {
 
 	#banner {
 		text-align: center;
-		padding: 4.5em 0 4.5em 0;
+		padding: 4em 0 4.5em 0;	
+		margin-bottom: 0;
+	}
+	#banner1 {
+		text-align: center;
+		padding: 1em 0  0;
 		margin-bottom: 0;
 	}
 
@@ -2481,9 +2495,10 @@ input, select, textarea {
 	#footer {
 		position: relative;
 		overflow: hidden;
-		padding: 6em 0 6em 0;
+		padding: 3em 0 3em 0;
 		background: #2b252c;
 		color: #fff;
+		text-align: center;
 	}
 
 		#footer .icon.circled {
