--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2624,10 +2624,11 @@ input, select, textarea {
 			padding: 0 2em 0 2em;
 		}
 		.contact{
-			background-color: #b4b4b4;
+			background-color: #443c45;
 		}
 		.formInput{
 			margin-bottom: 10px;
+			color: #1C0920;
 		}
 		.carousel article {
 			display: inline-block;
